--- a/_docs/Algorithm/서로 다른 부분 문자열의 개수.md
+++ b/_docs/Algorithm/서로 다른 부분 문자열의 개수.md
@@ -1,6 +1,6 @@
 ---
-title: 서로 다른 부분 문자열의 개수
-permalink: /docs/서로 다른 부분 문자열의 개수/
+title: BOJ-11478-서로 다른 부분 문자열의 개수
+permalink: /docs/BOJ-11478-서로 다른 부분 문자열의 개수/
 comments: true
 ---
 
@@ -25,8 +25,8 @@ print(len(set(l))-1)
 #### 다른 방법
 * <h5><a href="https://ko.wikipedia.org/wiki/%EC%A0%91%EB%AF%B8%EC%82%AC_%EB%B0%B0%EC%97%B4">Suffix Array</a>
 와 <a href="https://en.wikipedia.org/wiki/LCP_array">LCP</a> 사용</h5>
-  * O(n lg n)
+  * O(n log n)
 * <h5><a href="https://ideone.com/bugbDy">트라이</a></h5>
   * O(n2)
 * <h5><a href="https://ideone.com/hkjw5n">해싱</a></h5>
-  * O(n2 lg n)
+  * O(n2 log n)
