rename category Web to ETC permalink change

--- a/_docs/Algorithm/서로 다른 부분 문자열의 개수.md
+++ b/_docs/Algorithm/서로 다른 부분 문자열의 개수.md
@@ -1,6 +1,6 @@
 ---
 title: BOJ-11478-서로 다른 부분 문자열의 개수
-permalink: /docs/BOJ-11478-서로 다른 부분 문자열의 개수/
+permalink: /docs/BOJ-11478-서로-다른-부분-문자열의-개수/
 comments: true
 ---
 
